去除 common-collections/commons-langs3依赖; 去除 JDK11 API, 使用JDK1.8 编译框架, 增强兼容性; 去除 fastjson API依赖